Closed Bug 1758424 Opened 3 years ago Closed 3 years ago

Duplicated Extension Items with Native GTK Context Menus

Categories

(Core :: Widget: Gtk, defect)

Firefox 99
defect

Tracking

()

RESOLVED FIXED
100 Branch
Tracking Status
firefox100 --- fixed

People

(Reporter: lolrepeatlol, Assigned: emilio)

References

(Regressed 1 open bug)

Details

Attachments

(4 files)

When widget.gtk.native-context-menus is set to true, context menu items for extensions get duplicated many times, with the side effect of seemingly not allowing the menu to be open after releasing the right mouse button for quite some time given that the menu tries to update.

The menu items eventually stop trying to duplicate after a while, and the context menu can be accessed normally.

Attached image Ending of duplication
Blocks: 1757402

Web extensions etc use these to clean up their menu items, for example.

For context menus there's no need to fire popupshowing, it's been done
by the popup manager already.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8a1f5356bd14 Fire XUL events on native menus. r=stransky
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 100 Branch
See Also: → 1759950
Regressions: 1805073
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: