Bug 1758424 - Fire XUL events on native menus. r=stransky

Web extensions etc use these to clean up their menu items, for example.

For context menus there's no need to fire popupshowing, it's been done
by the popup manager already.

Differential Revision: https://phabricator.services.mozilla.com/D140522